--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
+
 .App {
-  text-align: center;
+background-color:#00bfa5;
+display: flex;
+overflow: hidden; 
+ height: 100vh;
+width: 100vw;
 }
 
 .App-logo {
